# sep2_client

./: .gitignore  .gitmodules  Cargo.toml  README.md
client/: Cargo.toml
client/examples/: der_client.rs
client/src/: client.rs  der.rs  device.rs  drlc.rs  edev.rs  event.rs  flow_reservation.rs  lib.rs  main.rs  messaging.rs  pricing.rs  pubsub.rs  security.rs  subscription.rs  time.rs  tls.rs
client/tests/: client.rs  der.rs  drlc.rs  examples.rs  messaging.rs  mod.rs  pricing.rs  pubsub.rs  security.rs
client/tests/event/: der.rs  mod.rs
docs/report/report_a/: abbreviations.tex  abstract.tex  acknowledgements.tex  adoption.tex  background.tex  context.tex  implementation.tex  introduction.tex  pubs.bib  report-a.tex  timeline.tex  unswthesis.cls
docs/report/report_c/: abbreviations.tex  abstract.tex  acknowledgements.tex  adoption.tex  background.tex  conclusion.tex  context.tex  design.tex  evaluation.tex  future.tex  implementation.tex  introduction.tex  pubs.bib  report-c.tex  unswthesis.cls
resources/: README.md  sep-ordered-dep.xsd  sep.xsd  sep_wadl.xml  wadl.xsd  wadlExt.xsd
resources/Documentation/: Editor Notes.txt  IEEE 2030.5 WADL.docx  changelog.txt
resources/Examples/: 16_01_08_EndDeviceControl.exi  16_01_08_EndDeviceControl.xml  16_01_10_Registration.exi  16_01_10_Registration.xml  16_02_08_EndDeviceList.xml  16_02_10_EndDevice.xml  16_03_06_EndDevice.xml  16_03_11_FunctionSetAssignmentsList.xml  16_04_06_EndDevice.xml  16_04_11_DeviceCapability.xml  16_06_01_Subscription.exi  16_06_01_Subscription.xml  16_06_04_Notification.exi  16_06_04_Notification.xml  16_07_03_DemandResponseProgramList.xml  16_07_05_EndDeviceControlList.xml  16_07_06_Response.xml  16_07_09_Response.xml  16_07_12_Response.xml  16_08_12_EndDeviceControl.xml  16_08_14_Response.xml  16_09_03_DERProgramList.xml  16_09_05_Subscription.xml  16_09_08_DERControlList.xml  16_09_12_DERCurveList.xml  16_09_13_Response.xml  16_09_16_Response.xml  16_09_19_Response.xml  16_10_06_ReadingType.xml  16_10_08_ReadingSetList.xml  16_10_10_ReadingList.xml  16_11_08_ReadingSetList.xml  16_11_10_ReadingList.xml  16_12_02_UsagePointList.xml  16_12_04_MeterReadingList.xml  16_12_06_ReadingType.xml  16_12_08_Reading.xml  16_13_01_MirrorUsagePoint.xml  16_13_03_MirrorMeterReading.xml  16_13_06_UsagePointList.xml  (+33 more)
resources/Model HTML/: blank.htm  index.htm
resources/Model HTML/EARoot/: EA1.htm  EA10.htm  EA11.htm  EA12.htm  EA13.htm  EA14.htm  EA15.htm  EA16.htm  EA17.htm  EA18.htm  EA19.htm  EA20.htm  EA21.htm  EA22.htm  EA23.htm  EA24.htm  EA25.htm  EA3.htm  EA4.htm  EA5.htm  EA6.htm  EA7.htm  EA8.htm  EA9.htm
resources/Model HTML/EARoot/EA1/: EA26.htm  EA28.htm  EA29.htm  EA30.htm
resources/Model HTML/EARoot/EA10/: EA190.htm  EA192.htm  EA193.htm  EA194.htm  EA195.htm  EA196.htm  EA197.htm  EA198.htm  EA199.htm  EA200.htm  EA201.htm  EA202.htm  EA203.htm  EA204.htm  EA205.htm  EA206.htm  EA207.htm
resources/Model HTML/EARoot/EA11/: EA208.htm  EA210.htm  EA211.htm  EA212.htm
resources/Model HTML/EARoot/EA12/: EA213.htm  EA215.htm  EA216.htm  EA217.htm  EA218.htm  EA219.htm  EA220.htm
resources/Model HTML/EARoot/EA13/: EA221.htm  EA223.htm  EA224.htm  EA225.htm  EA226.htm  EA227.htm  EA228.htm
resources/Model HTML/EARoot/EA14/: EA229.htm  EA231.htm  EA233.htm  EA234.htm  EA235.htm  EA236.htm  EA237.htm  EA238.htm  EA239.htm  EA240.htm  EA241.htm  EA242.htm  EA243.htm  EA244.htm  EA245.htm
resources/Model HTML/EARoot/EA15/: EA246.htm  EA248.htm  EA250.htm  EA251.htm  EA252.htm  EA253.htm  EA254.htm  EA255.htm  EA256.htm  EA257.htm  EA258.htm  EA259.htm  EA260.htm  EA261.htm  EA262.htm  EA263.htm  EA264.htm  EA265.htm
resources/Model HTML/EARoot/EA16/: EA280.htm  EA282.htm  EA283.htm  EA284.htm  EA285.htm  EA286.htm  EA287.htm  EA288.htm  EA289.htm  EA290.htm  EA291.htm  EA292.htm
resources/Model HTML/EARoot/EA17/: EA293.htm  EA295.htm  EA296.htm  EA297.htm  EA298.htm  EA299.htm  EA300.htm
resources/Model HTML/EARoot/EA18/: EA301.htm  EA303.htm  EA305.htm  EA306.htm  EA307.htm  EA308.htm  EA309.htm  EA310.htm  EA311.htm  EA312.htm  EA313.htm  EA314.htm  EA315.htm  EA316.htm  EA317.htm  EA318.htm  EA319.htm  EA320.htm  EA321.htm  EA322.htm  EA323.htm  EA324.htm  EA325.htm  EA326.htm
resources/Model HTML/EARoot/EA19/: EA327.htm  EA329.htm  EA330.htm  EA331.htm  EA332.htm  EA333.htm  EA334.htm  EA335.htm  EA336.htm  EA337.htm  EA338.htm  EA339.htm  EA340.htm  EA341.htm  EA342.htm  EA343.htm  EA344.htm
resources/Model HTML/EARoot/EA2/: EA31.htm  EA32.htm  EA33.htm  EA34.htm  EA35.htm
resources/Model HTML/EARoot/EA20/: EA345.htm  EA347.htm  EA348.htm  EA349.htm  EA350.htm  EA351.htm  EA352.htm  EA353.htm
resources/Model HTML/EARoot/EA21/: EA354.htm  EA356.htm  EA358.htm  EA360.htm  EA362.htm  EA364.htm  EA366.htm  EA367.htm  EA368.htm  EA369.htm  EA370.htm  EA371.htm  EA372.htm  EA373.htm  EA374.htm  EA375.htm  EA376.htm  EA377.htm  EA378.htm  EA379.htm  EA380.htm  EA381.htm  EA382.htm  EA383.htm  EA384.htm  EA385.htm  EA386.htm  EA387.htm  EA388.htm  EA389.htm  EA390.htm  EA391.htm  EA392.htm  EA393.htm  EA394.htm  EA395.htm  EA396.htm  EA397.htm  EA398.htm  EA399.htm  (+10 more)
resources/Model HTML/EARoot/EA22/: EA410.htm  EA411.htm  EA412.htm  EA413.htm  EA414.htm  EA415.htm  EA416.htm  EA417.htm  EA418.htm  EA419.htm  EA420.htm  (+80 more)
resources/Source/: IEEE 2030.5 UML Model.eap  RefDataRTFDoc.xml  sep2_wadl_generator.xlsm
sep2_client/: Cargo.toml
sep2_client/examples/: der_client.rs
sep2_client/src/: client.rs  der.rs  device.rs  drlc.rs  event.rs  flow_reservation.rs  messaging.rs  pricing.rs  pubsub.rs  security.rs  time.rs  tls.rs
sep2_client/tests/: client.rs  der.rs  drlc.rs  examples.rs  messaging.rs  pricing.rs  pubsub.rs
sep2_test_server/: Cargo.toml
sep2_test_server/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs  server.rs  tls.rs
test_client/: Cargo.toml
test_client/src/: main.rs
test_server/: Cargo.toml
test_server/src/: lib.rs  main.rs
thesis/report/report_a/: background.tex  pubs.bib  report-a.tex
thesis/report/report_c/: report-c.tex
(+389 files in other folders)
