[package]
name = "sep2_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.72"
sep2_common = { path = "../IEEE-2030.5-Common/common", features = ["edev","time"] }
hyper = { version = "0.14.26", features = ["http1","client","runtime","tcp","server"] }
hyper-openssl = "0.9.2"
log = "0.4.17"
openssl = "0.10.52"
rand = "0.8.5"
tokio = {version = "1.28.1", features = ["rt","net","macros"] }
tokio-openssl = "0.6.3"
dashmap = "5.5.3"
x509-parser = "0.15.1"
httpdate = "1.0.3"

[dev-dependencies]
sep2_common = { path = "../IEEE-2030.5-Common/common", features = ["examples","der","edev","fsa","metering","pubsub","dcap"]  }
sep2_test_server = { path = "../test_server" }
typemap_rev = "0.3.0"
simple_logger = "4.2.0"
clap = "4.4.7"

[features]
default = []
event = ["sep2_common/edev", "sep2_common/response"]
der = ["sep2_common/der", "event"]
pricing = ["sep2_common/pricing","event"]
messaging = ["sep2_common/messaging","event"]
drlc = ["sep2_common/drlc","event"]
flow_reservation = ["sep2_common/flow_reservation","event"]
pubsub = ["sep2_common/pubsub"]
conn_point = ["sep2_common/conn_point"]
aus_csip = ["conn_point"]
all = ["event","der","pricing","messaging","drlc", "flow_reservation", "pubsub","aus_csip"]

[[example]]
name = "der_client"
path = "examples/der_client.rs"
required-features = ["pubsub","der","event"]


