[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.27", features = ["server", "http1", "http2", "tcp"] }
sep2_common = { path = "../IEEE-2030.5-Common/common", features = ["examples"] }
sep2_client = { path = "../client" }
openssl = "0.10.55"
tokio = { version = "1.29.1", features = ["full"] }
tokio-openssl = "0.6.3"
log = "0.4.19"
clap = { version = "4.3.10", features = ["derive"] }
anyhow = "1.0.72"
async-trait = "0.1.72"
