[package]
name = "sep2_test_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sep2_common = { path = "../IEEE-2030.5-Common/common", features = ["der","edev","fsa","metering","pubsub"] }
sep2_client = { path = "../client", features=["pubsub","der","event"] } 
anyhow = "1.0.75"
async-trait = "0.1.73"
tokio = {version = "1.28.1", features = ["full"] }
typemap_rev = "0.3.0"
log = "0.4.20"
